--- a/deployments/prod/us-east-1/service.yaml
+++ b/deployments/prod/us-east-1/service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-k8s
+  name: hola
 spec:
   ports:
   - name: http
     targetPort: 5000
     port: 80
   selector:
-    app: hello-k8s
+    app: hola
 
