--- a/deployments/prod/us-east-1/deployment.yaml
+++ b/deployments/prod/us-east-1/deployment.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: hola
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: hola
@@ -18,6 +18,19 @@ spec:
         image: 612427630422.dkr.ecr.us-east-1.amazonaws.com/sre/hola:latest
         resources:
           requests:
-            cpu: 10m
+            cpu: 100m
             memory: 20Mi
+        env:
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
 ---
