--- a/deployments/prod/us-east-1/deployment.yaml
+++ b/deployments/prod/us-east-1/deployment.yaml
@@ -1,4 +1,13 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: hola
+  namespace: default
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::612427630422:role/us-east-1-prod-x-default-default-hola
+automountServiceAccountToken: true
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -13,6 +22,7 @@ spec:
       labels:
         app: hola
     spec:
+      serviceAccountName: hola
       containers:
       - name: hola
         image: 612427630422.dkr.ecr.us-east-1.amazonaws.com/sre/hola:latest
