add example of bitnami secrets

--- a/deployments/prod/us-east-1/deployment.yaml
+++ b/deployments/prod/us-east-1/deployment.yaml
@@ -48,4 +48,7 @@ spec:
         envFrom:
         - configMapRef:
             name: hola
+        envFrom:
+        - secretRef:
+            name: hola
 ---
