--- a/deployments/prod/us-east-1/deployment.yaml
+++ b/deployments/prod/us-east-1/deployment.yaml
@@ -27,7 +27,7 @@ spec:
         fsGroup: 65534
       containers:
       - name: hola
-        image: 612427630422.dkr.ecr.us-east-1.amazonaws.com/sre/hola:4126453f
+        image: 612427630422.dkr.ecr.us-east-1.amazonaws.com/sre/hola:latest
         resources:
           requests:
             cpu: 100m
