--- a/Dockerfile.sidecar
+++ b/Dockerfile.sidecar
@@ -1,6 +1,6 @@
 FROM debian:10-slim
 
-RUN apt-get update && apt-get install -y wget bash
+RUN apt-get update && apt-get install -y wget bash curl
 
 RUN wget -c https://github.com/kelseyhightower/confd/releases/download/v0.16.0/confd-0.16.0-linux-amd64
 
