--- a/deployments/prod/us-east-1/ingress.yaml
+++ b/deployments/prod/us-east-1/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: internal-traefik
 spec:
   rules:
-  - host: hola-internal.prod-x-default.moengage.com
+  - host: hola.prod-us-east-1.moengage.com
     http:
       paths:
       - path: /
